fix: Update selection styles for better visibility in Firefox and other browsers

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,22 @@ body {
   font-style: normal;
   font-variation-settings: "wdth" 100;
 }
+::-moz-selection { /* Code for Firefox */
+
+  color: white;
+
+  background: #760C2A;
+
+}
+ 
+::selection {
+
+  color: white;
+
+  background:#760C2A;
+
+}
+ 
 
 @layer utilities {
   .text-balance {
